# EVG

./: CMakeLists.txt  EVG.py  README.md  build.sh  fastAQ.cpp  graphvcf.cpp  meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yaml.cp
EVG/: EVG.py  fastAQ.cpp  graphvcf.cpp
EVG/include/: ThreadPool.hpp  check_vcf_sort.hpp  convert.hpp  count.hpp  delly2vcf.hpp  get_time.hpp  sample.hpp  sample_fast.hpp  save.hpp  sort_find.hpp  strip_split_join.hpp  vcf_breakpoint.hpp  vcf_convert.hpp  vcf_count.hpp  vcf_filter.hpp  vcf_merge.hpp  vcf_open.hpp  vcf_recall.hpp  vcf_split.hpp  vcf_win.hpp
EVG/src/: BayesTyper.py  GraphAligner.py  GraphTyper2.py  PanGenie.py  Paragraph.py  VG_MAP_Giraffe.py  bwa.py  convert.cpp  convert.py  count.cpp  delly2vcf.cpp  getsize.py  merge.py  run_cmd.py  select_software.py  vcf_breakpoint.cpp  vcf_convert.cpp  vcf_count.cpp  vcf_filter.cpp  vcf_merge.cpp  vcf_recall.cpp  vcf_split.cpp  vcf_win.cpp
fig/: pipeline.jpf
include/: SafeQueue.hpp  check_vcf_sort.hpp  convert.hpp  count.hpp  delly2vcf.hpp  get_time.hpp  kseq.h  out_merge.py  sample.hpp  sample_fast.hpp  save.hpp  sort_find.hpp  strip_split_join.hpp  vcf_breakpoint.hpp  vcf_convert.hpp  vcf_count.hpp  vcf_filter.hpp  vcf_merge.hpp  vcf_open.hpp  vcf_recall.hpp  vcf_split.hpp  vcf_win.hpp
src/: BayesTyper.py  GraphAligner.py  GraphTyper2.py  PanGenie.py  Paragraph.py  VG_MAP_Giraffe.py  bwa.py  check_software.py  check_vcf_sort.cpp  convert.cpp  convert.py  count.cpp  delly2vcf.cpp  get_time.cpp  getsize.py  merge.py  run_cmd.py  sample.cpp  sample_fast.cpp  save.cpp  select_software.py  sort_find.cpp  strip_split_join.cpp  vcf_breakpoint.cpp  vcf_convert.cpp  vcf_count.cpp  vcf_filter.cpp  vcf_merge.cpp  vcf_open.cpp  vcf_recall.cpp  vcf_split.cpp  vcf_win.cpp
test/: sample.txt  test.fa
